--- a/index.html
+++ b/index.html
@@ -6,15 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music App</title>
     <link rel="stylesheet" href="styles.css" class="rel">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet" <link rel="stylesheet" href="styles.css" class="rel">
+
 </head>
-<div class="app">
-    <header>
-        <h1>Tap Music</h1>
-    </header>
-</div>
 
 <body>
+    <div class="app">
+        <header>
+            <h1>Tap Music</h1>
+            <p>Make music with only one tap</p>
+        </header>
+        <div class="visual"></div>
+        <div class="pads">
+            <div class="pad1">
+                <audio class="audio" src="/audio/bubbles.mp3" class="src"></audio>
+            </div>
+            <div class="pad2">
+                <audio class="audio" src="/audio/clay.mp3" class="src"></audio>
+            </div>
+            <div class="pad3">
+                <audio class="audio" src="/audio/confetti.mp3" class="src"></audio>
+            </div>
+            <div class="pad4">
+                <audio class="audio" src="/audio/glimmer.mp3" class="src"></audio>
+            </div>
+            <div class="pad5">
+                <audio class="audio" src="/audio/moon.mp3" class="src"></audio>
+            </div>
+            <div class="pad6">
+                <audio class="audio" src="/audio/ufo.mp3" class="src"></audio>
+            </div>
+        </div>
+    </div>
 
+
+    <script src="/index.js"></script>
 </body>
 
 </html>
