fixed audio track issue

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
         <div class="visual"></div>
         <div class="pads">
             <div class="pad1">
-                <audio class="audio" src="/audio/bubbles.mp3" class="src"></audio>
+                <audio class="audio" src="./audio/bubbles.mp3" class="src"></audio>
             </div>
             <div class="pad2">
-                <audio class="audio" src="/audio/clay.mp3" class="src"></audio>
+                <audio class="audio" src="./audio/clay.mp3" class="src"></audio>
             </div>
             <div class="pad3">
-                <audio class="audio" src="/audio/confetti.mp3" class="src"></audio>
+                <audio class="audio" src="./audio/confetti.mp3" class="src"></audio>
             </div>
             <div class="pad4">
-                <audio class="audio" src="/audio/glimmer.mp3" class="src"></audio>
+                <audio class="audio" src="./audio/glimmer.mp3" class="src"></audio>
             </div>
             <div class="pad5">
-                <audio class="audio" src="/audio/moon.mp3" class="src"></audio>
+                <audio class="audio" src="./audio/moon.mp3" class="src"></audio>
             </div>
             <div class="pad6">
-                <audio class="audio" src="/audio/ufo.mp3" class="src"></audio>
+                <audio class="audio" src="./audio/ufo.mp3" class="src"></audio>
             </div>
         </div>
     </div>
