added keydown functions a-f

--- a/index.html
+++ b/index.html
@@ -16,27 +16,35 @@
     <div class="app">
         <header>
             <h1>Tap Music</h1>
-            <p>Make music with only one tap</p>
+            <p></p>
+            <P>Tap keys A-F | Click keys using mouse | Tap keys using touch screen</P>
+            
         </header>
         <div class="visual"></div>
         <div class="pads">
             <div class="pad1">
-                <audio class="audio key green" src="./audio/bubbles.mp3" ></audio>
+                <audio class="audio key" src="./audio/bubbles.mp3"></audio>
+                <p>a</p>
             </div>
             <div class="pad2">
-                <audio class="audio key red" src="./audio/clay.mp3" ></audio>
+                <audio class="audio key" src="./audio/clay.mp3" ></audio>
+                <p>b</p>
             </div>
             <div class="pad3">
-                <audio class="audio key purple" src="./audio/confetti.mp3" ></audio>
+                <audio class="audio key" src="./audio/confetti.mp3" ></audio>
+                <p>c</p>
             </div>
             <div class="pad4">
-                <audio class="audio key yellow" src="./audio/glimmer.mp3" ></audio>
+                <audio class="audio key" src="./audio/glimmer.mp3" ></audio>
+                <p>d</p>
             </div>
             <div class="pad5">
-                <audio class="audio key orange" src="./audio/moon.mp3"></audio>
+                <audio class="audio key" src="./audio/moon.mp3"></audio>
+                <p>e</p>
             </div>
             <div class="pad6">
-                <audio class="audio key pink" src="./audio/ufo.mp3"></audio>
+                <audio class="audio key" src="./audio/ufo.mp3"></audio>
+                <p>f</p>
             </div>
         </div>
     </div>
